Fix horizontal scrolling issue

--- a/dashboard/dashboard.scss
+++ b/dashboard/dashboard.scss
@@ -46,6 +46,12 @@ input {
   flex: 1;
 }
 
+.main-wrapper {
+  width: 100%;
+  height: 80vh;
+  overflow: auto;
+}
+
 .bottom-tray {
   position: fixed;
   bottom: 0;
@@ -86,11 +92,17 @@ input {
   border: 0;
 }
 
+.connect-now-btn {
+  margin-top: 70px;
+}
+
 .card-wrapper {
   padding: 18px;
   .card {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 32px;
+    border: 1px solid #0000000f;
+    box-shadow: #00000017 1px 2px 7px -1px;
   }
 
   .card-body {
@@ -111,7 +123,7 @@ input {
   font-weight: 400;
   padding: 60px;
   background: $gradient;
-  height: 80vh;
+  height: 70vh;
 
   .main-txt {
     font-style: normal;
